--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-socket.io": "^11.1.1",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/swagger": "^11.1.6",
     "@nestjs/testing": "^11.0.1",
+    "@nestjs/websockets": "^11.1.1",
     "@prisma/client": "^6.7.0",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
@@ -49,6 +51,7 @@
     "passport-jwt": "^4.0.1",
     "prettier": "^3.4.2",
     "prisma": "^6.5.0",
+    "socket.io": "^4.8.1",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
