--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
+    "@nestjs/bullmq": "^11.0.2",
     "@nestjs/cli": "^11.0.0",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
@@ -41,12 +42,14 @@
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
     "bcrypt": "^5.1.1",
+    "bullmq": "^5.52.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
+    "ioredis": "^5.6.1",
     "jest": "^29.7.0",
     "passport-jwt": "^4.0.1",
     "prettier": "^3.4.2",
